<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registerActivityView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:id="@+id/helloDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:gravity="center_horizontal"
            android:visibility="invisible"
            android:text="DOCTOR"
            android:textColor="@color/white"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_login"
            android:hint="@string/hint_email"
            android:inputType="number"
            android:paddingLeft="30dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_login"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingLeft="30dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <!-- Login Button -->
        <EditText
            android:id="@+id/password_check"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_login"
            android:ems="10"
            android:hint="@string/hint_password_check"
            android:inputType="textPassword"
            android:paddingLeft="30dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dip"
            android:background="@drawable/button_login"
            android:text="@string/btn_register"
            android:textColor="@color/btn_login_text" />

        <!-- Link to Login Screen -->

        <TextView
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dip"
            android:background="@drawable/button_link_to_login"
            android:gravity="center"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ARE YOU DOCTOR?"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/askDoctor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>